# ITI_Cpp

./: README.md
FileAction/: FileAction.cpp  data.txt
Vsomeip-caps-logger/: caps-client.cpp  caps-server  caps-server.cpp  vsomeip.json
Vsomeip-caps-logger-rpi/: CMakeLists.txt  PC-SyncClient.cpp  Rsapberry-Server.cpp  toolchain-rpi3.cmake  vsomeip-client.json  vsomeip-server.json
Vsomeip-caps-logger-rpi/build-pc/: CMakeCache.txt  Makefile  PC-SyncClient  cmake_install.cmake
Vsomeip-caps-logger-rpi/build-rpi/: CMakeCache.txt  Makefile  Raspberry-Server  cmake_install.cmake
concurrency-caps-logger/: caps_lock_log.txt  caps_loger.cpp
